# knowledge-center

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  README.md  SERVICE_GUIDE.md  USER_GUIDE.md  dev.sh  start_all_services.sh  stop_all_services.sh
backend/: pyproject.toml  run.py
backend/blogs/gen-ai-insights/: config.json  content.md
backend/blogs/google-ai-tools-guide/: config.json  content.md
backend/blogs/markdown-guide/: config.json  content.md
backend/blogs/my-first-blog/: config.json  content.md
backend/courses/claude-code-basics/: config.json
backend/courses/claude-code-basics/assets/: README.md
backend/courses/claude-code-basics/labs/: lab-1.md  lab-2.md
backend/courses/claude-code-basics/slides/: slides.md
backend/courses/google-family/: config.json
backend/courses/google-family/labs/: lab-3.md
backend/courses/google-family/slides/: jules.md  (+5 more)
backend/courses/my-course-template/: README.md  config.json
backend/courses/react-advanced-patterns/: config.json
backend/courses/test-course/: config.json
backend/courses/test-course-for-edit-fix/: config.json
backend/courses/test-course-for-editing/: config.json
backend/courses/test-course-import/: config.json
backend/courses/theme-demo/: info.json
backend/courses/web-development-basics/: config.json
backend/src/backend/: main.py
backend/temp_labs/: lab-1-7b7f9555-3239-4d34-aac1-061caece2a60.md  lab-1-b9a9a940-3f89-42fd-9848-7ec3a1ee205f.md
backend/template-course/: config.json
backend/template-course/assets/: README.md
backend/template-course/slides/: slides.md
(+61 files in other folders)
