[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "markdown>=3.9",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
